# pytest-dynamic-params

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  COMMIT_MESSAGE.md  LICENSE  README.md  generate_reports.bat  pyproject.toml  setup.py
.codebuddy/agents/: 修复代码.md  生成代码.md  生成测试代码.md
.codebuddy/rules/: 语言.mdc
.github/workflows/: code-quality.yml
.trae/rules/: code-style.md  pre-commit-execution.md  project_rules.md
.trae/skills/: relpath.md
docs/: STRUCTURE.md  reports-readme.md  reports-summary.md  usage-guide.md
examples/: __init__.py  advanced_usage.py  basic_usage.py  circular_dependency_example.py  usage_examples.py
specs/: 待办.md  设计.md  需求.md  需求分析.md
src/: __init__.py
src/dynamic_params/: __init__.py  config.py  decorators.py  dependency.py  errors.py  lazy.py  plugin.py  utils.py
src/dynamic_params/core/: generator.py  registry.py
temp/: TRAE模型对比.md  待安装MCP.md
tests/: conftest.py  utils.py
tests/fixtures/: __init__.py  config.py  database.py  environment.py
tests/functional/: test_basic.py  test_cache.py  test_circular_dependency.py  test_error_handling.py  test_parametrized_fixture.py  test_scopes.py  test_with_fixture.py
tests/functional/basic/: test_basic.py
tests/functional/cache/: test_cache.py
tests/functional/dependency/: test_circular_dependency.py  test_complex_dependencies.py
tests/functional/edge_cases/: test_comprehensive.py  test_scenarios.py
tests/functional/error_handling/: test_error_handling.py
tests/functional/fixture_integration/: test_fixture.py  test_parametrized_fixture.py
tests/functional/fixture_interaction/: test_fixture.py
tests/functional/generator/: test_param_dependencies.py
tests/functional/lazy/: test_lazy_loading.py
tests/functional/scopes/: test_scopes.py
tests/generators/: __init__.py  basic.py  config.py  data.py
tests/integration/: test_nested_dynamic_params.py  test_nested_fixtures.py  test_plugin_compatibility.py  test_xdist_compatibility.py
tests/performance/: test_benchmark.py  test_integration.py  test_performance.py  test_performance_benchmark.py  test_performance_metrics.py  utils.py
tests/unit/: test_config.py  test_decorators.py  test_dependency.py  test_errors.py  test_generator.py  test_lazy.py  test_registry.py  test_utils.py
tests/utils/: __init__.py  assertions.py  data.py  fixtures.py  generators.py  performance.py
