[project]
name = "pytest-dynamic-params"
version = "0.1.0"
description = "Dynamic parameters plugin for pytest"
readme = "README.md"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
license = { file = "LICENSE" }
classifiers = [
    "Framework :: Pytest",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"
dependencies = [
    "pytest"
]

[project.optional-dependencies]
dev = [
    "black",
    "flake8",
    "isort",
    "mypy",
    "bandit",
    "pre-commit"
]

[project.entry-points.pytest11]
dynamic-params = "dynamic_params.plugin"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.basedpyright]
pythonVersion = "3.8"
strict = true
reportMissingImports = true
reportMissingTypeStubs = true
reportUnusedVariable = true
reportUnusedImport = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203"]
