[project]
name = "pytest-dynamic-params"
version = "0.1.0"
description = "Dynamic parameters plugin for pytest"
readme = "README.md"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
license = { file = "LICENSE" }
classifiers = [
    "Framework :: Pytest",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]
requires-python = ">=3.8"
dependencies = [
    "pytest"
]

[project.optional-dependencies]
dev = [
    "black",
    "flake8",
    "isort",
    "mypy",
    "bandit",
    "pre-commit"
]

[project.entry-points.pytest11]
dynamic-params = "dynamic_params.plugin"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.basedpyright]
pythonVersion = "3.8"
strict = true
reportMissingImports = true
reportMissingTypeStubs = true
reportUnusedVariable = true
reportUnusedImport = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"

[tool.flake8]
max-line-length = 88
extend-ignore = [
    "E203",  # 与 black 冲突的空格规则
    "ANN101", "ANN102", "ANN103", "ANN104",  # 忽略 self/cls 的类型注解检查
    "ANN201", "ANN202", "ANN203", "ANN204", "ANN205", "ANN206",  # 忽略返回值类型注解检查
    "ANN001", "ANN002", "ANN003"  # 忽略参数类型注解检查
]

[tool.flake8.plugins]
flake8-annotations = false

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
exclude = "^tests/|^venv/|^\\.venv/"
mypy_path = "src"
follow_imports = "silent"
warn_unused_configs = true
namespace_packages = true
